--- a/R_scripts/exploratory_data_analysis.Rmd
+++ b/R_scripts/exploratory_data_analysis.Rmd
@@ -110,7 +110,7 @@ final_indiv_chart
 The variables contained in those datasets are:<br>
 - *nquest* and *nord*: both integer numbers. nquest (household ID) represents the primary key to merge household level. In order to merge individual level information it must be considered together with nord (ID of each household member).<br>
 - *sex*: define males as 1 and females as 2.<br>
-- *anasc*: year of birth of the respondent
+- *anasc*: year of birth of the respondent. <br>
 - *staciv*: marital status which is inserted as integer number ranging from 1 to 6. Specifically, it identifies: <br>
 1 = celibe/nubile, 2 = convivente, 3 = Sposato/a, 4 = Vedovo/a, 5 Separato/a, and 6 Divorziato/a.
 - *ireg*: integer number (1-20) reporting the NUTS2 codes, meaning the numbers associated with the Italian regions. In particular: 
@@ -128,7 +128,7 @@ numbers <- seq(1,20)
 
 association <- data.frame("Region"=regions,"NUTS2"=numbers)
 
-knitr::kable(association, caption = "Regions and corresponding NUTS2 code")
+knitr::kable(association)
 
 ```
 
